--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,7 +44,7 @@ set -g @continuum-save-interval '20'
 #set Tmux save time
 
 run '~/.tmux/plugins/tpm/tpm'
-run-shell -b 'source rosbuild_ws/setup.bash'
+#run-shell -b 'source rosbuild_ws/setup.bash'
 
 #set -g -f  default-terminal "screen-256color"
 
